# pymss-studio-py

./: .gitignore  LICENSE  README.md  __init__.py  config.json  config.py  main.py  main_window.py  pyproject.toml  requirements.txt  run.py  start.bat  start.vbs  task_model.py  worker_bridge.py  workflow_graph.py
data/: workflows.json
data/models/cleanup/audio_restoration/: Apollo_LQ_MP3_restoration.pymss_state_dict.json  Apollo_LQ_MP3_restoration.yaml  apollo_model_v2.yaml  model_apollo_vocals_ep_54.yaml
data/models/cleanup/noise_bleed_control/: denoise_mel_band_roformer_aufr33_sdr_27.9959.yaml
data/models/experimental_general/: apollo_model_uni.yaml
data/models/instrumental/: bs_roformer_inst_hyperacev2.yaml  inst_gaboxFlowersV10.yaml
data/models/karaoke/: mel_band_roformer_karaoke_becruily.yaml
data/models/music_stems/dnr_stems/: model_bandit_plus_dnr_sdr_11.47.yaml
data/models/music_stems/four_stem/: HTDemucs4.yaml  MelBandRoformer4StemFTLarge.yaml  bs_roformer_4stems_ft.yaml  mel_band_roformer_4stems_large_ver1.yaml  mel_band_roformer_4stems_xl_ver1.yaml  ver2.yaml  (+1 more)
data/settings/: app.json  model-cache.json  tasks.json  workflows.json
engine/: __init__.py
engine/msst/: __init__.py  engine.py
patches/: __init__.py  apply_all.py  patches_catalog.json  tiger.py
python/: requirements.txt  worker.py  worker_audio.py  worker_download.py  worker_graph_workflows.py  worker_infer.py  worker_models.py  worker_protocol.py  worker_workflows.py
views/: models.py  separate.py  settings.py  workflow_simple.py  workflows.py
widgets/: drop_area.py
(+83 files in other folders)
